# EphemeralNet

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  test_fs.cpp  todo.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: cmake_hash.py
.github/workflows/: ci.yml  sync-docs.yml
cmake/: CompilerWarnings.cmake
docs/: architecture.md  cli-command-reference.md  deployment-guide.md  governance-and-aaup.md  performance-tuning.md  protocol.md  troubleshooting.md
docs/01-getting-started/: 01-introduction.md
docs/02-core-concepts/: 01-system-architecture.md  02-networking-and-relay.md  03-data-and-ttl.md  04-security-model.md
docs/03-operations/: 01-configuration.md  02-observability.md  03-performance-tuning.md  04-deployment-guide.md  05-troubleshooting.md  06-governance.md  07-validation.md
docs/04-reference/: 01-cli-reference.md
docs/handbook/: README.md  cli-commands.md  component-guide.md  configuration-reference.md  developer-walkthrough.md  faq-and-troubleshooting.md  feature-catalog.md  integration-cookbook.md  networking-and-bootstrap.md  node-lifecycle.md  performance-capacity-playbook.md  security-hardening-and-threat-model.md  security-model.md  storage-and-ttl.md  system-overview.md  testing-and-quality.md  usage-scenarios.md
docs/observability/: README.md  grafana-pow-dashboard.json  pow-alerts.yml
include/ephemeralnet/: Config.hpp  Export.hpp  Types.hpp  libephemeralnet.hpp
include/ephemeralnet/bootstrap/: TokenChallenge.hpp
include/ephemeralnet/core/: Node.hpp  SwarmCoordinator.hpp  UpdateCheck.hpp
include/ephemeralnet/crypto/: ChaCha20.hpp  CryptoManager.hpp  HmacSha256.hpp  Sha256.hpp  Shamir.hpp
include/ephemeralnet/daemon/: ControlPlane.hpp  StructuredLogger.hpp
include/ephemeralnet/dht/: KademliaTable.hpp
include/ephemeralnet/network/: AdvertiseDiscovery.hpp  KeyExchange.hpp  KeyManager.hpp  NatTraversal.hpp  RelayClient.hpp  ReputationManager.hpp  SessionManager.hpp
include/ephemeralnet/protocol/: Manifest.hpp  Message.hpp
include/ephemeralnet/relay/: EventLoop.hpp  RelayServer.hpp
include/ephemeralnet/security/: StoreProof.hpp
include/ephemeralnet/storage/: ChunkStore.hpp
scripts/: generate_docs.py  generate_version_metadata.py  install.ps1  install.sh  pow_metrics_proxy.py
src/: libephemeralnet.cpp  main.cpp
src/bootstrap/: TokenChallenge.cpp
src/core/: ChunkStore.cpp  Node.cpp  SwarmCoordinator.cpp  Types.cpp  UpdateCheck.cpp
src/crypto/: ChaCha20.cpp  CryptoManager.cpp  HmacSha256.cpp  Sha256.cpp  Shamir.cpp
src/daemon/: ControlClient.cpp  ControlPlane.cpp  ControlServer.cpp  StructuredLogger.cpp
src/dht/: KademliaTable.cpp
src/network/: AdvertiseDiscovery.cpp  KeyExchange.cpp  KeyManager.cpp  NatTraversal.cpp  RelayClient.cpp  ReputationManager.cpp  SessionManager.cpp
src/protocol/: Manifest.cpp  Message.cpp
src/relay/: EventLoop.cpp  RelayServer.cpp  main.cpp
src/security/: StoreProof.cpp
tests/: advertise_discovery.cpp  announce_abuse.cpp  announce_distribution.cpp  bootstrap.cpp  bootstrap_gossip.cpp  cli_bootstrap_flow.cpp  cli_config.cpp  cli_control_flow.cpp  cli_error_cases.cpp  cli_fetch_dir.cpp  cli_interleaved_args.cpp  crypto_hardening.cpp  dht_buckets.cpp  fetch_priority.cpp  fetch_retry.cpp  handshake.cpp  key_schedule.cpp  manifest.cpp  manifest_discovery.cpp  manifest_flow.cpp  manifest_fuzz.cpp  multi_node_integration.cpp  nat_node.cpp  nat_traversal.cpp  persistent_storage.cpp  pow_monitoring.cpp  protocol_auth.cpp  protocol_fuzz.cpp  protocol_message.cpp  relay_client_integration.cpp  secure_exchange.cpp  secure_transport.cpp  shamir.cpp  smoke.cpp  store_fetch_plan_rotation.cpp  store_pow.cpp  swarm_distribution.cpp  swarm_fairness.cpp  swarm_node.cpp  swarm_roles.cpp  (+6 more)
tests/integration/: relay_server_integration.py
